Returning to a blank slate